--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,13 @@
 	    <artifactId>spring-context</artifactId>
 	    <version>4.2.0.RELEASE</version>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/javax.annotation/jsr250-api -->
+	<dependency>
+	    <groupId>javax.annotation</groupId>
+	    <artifactId>jsr250-api</artifactId>
+	    <version>1.0</version>
+	</dependency>
+	
   </dependencies>
 </project>
